--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,49 @@
-/vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
+# Dependencies
+node_modules
+/.pnp
+.pnp.js
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
+# Testing
+/coverage
 
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
+# Next.js
+/.next/
+/out/
+.next
+frontend/.next
+frontend/out
 
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
+# Production
+/build
+/dist
+build
+dist
 
-storage/*.key
+# Environment files
 .env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs
+*.log
+
+# IDE/Editor
+.idea
+.vscode
+*.swp
+*.swo
+.DS_Store
+
+# Misc
+.vercel
+*.pem
+.DS_Store
+*.tsbuildinfo
+next-env.d.ts
