--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
+  "name": "admin-dashboard-ecommerce",
+  "scripts": {
+    "frontend": "npm run dev --prefix frontend",
+    "backend": "npm run dev --prefix backend",
+    "dev": "npm-run-all --parallel frontend backend"
+  },
   "dependencies": {
     "react-hook-form": "^7.54.0",
     "react-table": "^7.8.0"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
