--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "dev": "npm-run-all --parallel frontend backend"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.9",
+    "axios": "^1.8.2",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "react-hook-form": "^7.54.0",
     "react-table": "^7.8.0"
   },
