--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "react-hook-form": "^7.54.0",
     "react-table": "^7.8.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "npm-run-all": "^4.1.5"
   }
 }
