--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash.debounce": "^4.0.8",
     "multer": "^1.4.5-lts.1",
     "react-hook-form": "^7.54.0",
     "react-table": "^7.8.0"
