--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "admin-dashboard-ecommerce",
   "scripts": {
     "frontend": "npm run dev --prefix frontend",
-    "backend": "npm run dev --prefix backend",
-    "dev": "npm-run-all --parallel frontend backend"
+    "backend": "npm run dev --prefix backend",  
+    "dev": "npm-run-all --parallel frontend backend",
+    "start": "npm-run-all --parallel frontend backend"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
