--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,8 @@
     "@types/uuid": "^10.0.0",
     "axios": "^1.6.7",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0-rc-66855b96-20241106",
+    "react-dom": "^19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.4.0",
     "react-table": "^7.8.0",
     "recharts": "^2.14.1",
