--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "admin-dashboard-ecommerce",
   "scripts": {
     "frontend": "npm run dev --prefix frontend",
-    "backend": "npm run dev --prefix backend",  
+    "backend": "npm run dev --prefix backend",
     "dev": "npm-run-all --parallel frontend backend",
     "start": "npm-run-all --parallel frontend backend"
   },
@@ -15,6 +15,8 @@
     "jsonwebtoken": "^9.0.2",
     "lodash.debounce": "^4.0.8",
     "multer": "^1.4.5-lts.1",
+    "next": "^15.2.4",
+    "nodemon": "^3.1.9",
     "react-hook-form": "^7.54.0",
     "react-table": "^7.8.0"
   },
